# aether-gateway

./: .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg  README.md
.github/workflows/: ci-cd-multi-platforms.yml  cpplint.yml  simulator.yml
cmake/: repo_init.cmake
gateway/: CMakeLists.txt  aether_construct.h  aether_construct_lora_module.h  gateway_server.cpp  gateway_server.h
libs/gateway/: CMakeLists.txt  gateway.cpp  gateway.h  gateway_cloud.cpp  gateway_cloud.h  gw_stream.cpp  gw_stream.h  local_port.cpp  local_port.h  server_stream.cpp  server_stream.h  server_stream_manager.cpp  server_stream_manager.h
libs/gateway/api/: client_api.cpp  client_api.h  gateway_api.h
simulator/: CMakeLists.txt  user_config.h
simulator/sim-gateway/: CMakeLists.txt  gw-sim-access-point.cpp  gw-sim-access-point.h  gw-sim-adapter.cpp  gw-sim-adapter.h  gw-sim-channel.cpp  gw-sim-channel.h  gw-sim-data-bus.cpp  gw-sim-data-bus.h  gw-sim-device-port.cpp  gw-sim-device-port.h  gw-sim-device.cpp  gw-sim-device.h  gw-sim-transport.cpp  gw-sim-transport.h  sim-gateway-config.h
simulator/tests/sim-alice-bob/: CMakeLists.txt  sim-alice-bob.cpp
src/: CMakeLists.txt  aether_construct.h  aether_construct_lora_gateway.h  gateway_server.cpp  gateway_server.h  main.cpp
src/gateway/: gateway.cpp  gateway.h  gw_stream.cpp  gw_stream.h  local_port.cpp  local_port.h  server_stream.cpp  server_stream.h  server_stream_manager.cpp  server_stream_manager.h
src/gateway/api/: client_api.cpp  client_api.h  gateway_api.h
src/lora_gateways/: dx_smart_lr02_gw.cpp  dx_smart_lr02_gw.h  ilora_gateway_driver.h  lora_gateway_driver_types.h  lora_gateway_factory.cpp  lora_gateway_factory.h
tests/: CMakeLists.txt  CPPLINT.cfg
